# traffic-surrogate-rl

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/experiments/: dataset_phase1.yaml
configs/sumo/: diag_free_flow.yaml  diag_stress.yaml  phase1.yaml  phase1_1.yaml
scripts/: eval_in_sumo.sh  inspect_rollout.py  make_dataset.sh  run_diagnostic_suite.py  run_rollout.py  train_ppo_surrogate.sh  train_surrogate.sh
src/rl/: evaluate.py  reward.py  sumo_env_wrapper.py  surrogate_env.py  train_ppo.py
src/sumo_env/: dataset_generation.py  detectors.py  network_builder.py  run_simulation.py
src/surrogate/: datasets.py  deeponet.py  eval.py  losses.py  train.py
src/utils/: config.py  logging.py  plotting.py
